--- a/HabitatBuddy/HabitatBuddy/HabitatBuddy.csproj
+++ b/HabitatBuddy/HabitatBuddy/HabitatBuddy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -14,7 +14,10 @@
     <PackageReference Include="Xam.Plugins.Notifier" Version="3.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
     <PackageReference Include="Xamarin.Forms.Theme.Base" Version="1.0.0.43-pre1" />
-    <PackageReference Include="Xamarin.Forms.Theme.Light" Version="1.0.0.43-pre1" />  
+    <PackageReference Include="Xamarin.Forms.Theme.Light" Version="1.0.0.43-pre1" />
+    <!--
+    <PackageReference Include="Xamarin.Android.Support.Compat" Version="28.0.0.1" />
+    -->
   </ItemGroup>
 
   <ItemGroup>
