Fixed issue of categories showing up as their corresponding number under the category list
Added a method to fix the title for each of the categories. Also hardcoded the action plan id range to be between 20 and 170 so that the test categories in the database will not show up.

--- a/HabitatBuddy/HabitatBuddy.iOS/HabitatBuddy.iOS.csproj
+++ b/HabitatBuddy/HabitatBuddy.iOS/HabitatBuddy.iOS.csproj
@@ -146,12 +146,12 @@
     <PackageReference Include="Xam.Plugins.Notifier">
       <Version>3.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.555618" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\HabitatBuddy\HabitatBuddy.csproj">
-      <Project>{ADBA72E4-78D7-47A2-BA65-C37EDD5045C4}</Project>
+      <Project>{1CB7CB33-671E-4630-A946-16B38D6E69A4}</Project>
       <Name>HabitatBuddy</Name>
     </ProjectReference>
   </ItemGroup>
