Adding remaining images - still need pantry and concrete steps before porch (added both iOS and Android)

--- a/HabitatBuddy/HabitatBuddy.Android/HabitatBuddy.Android.csproj
+++ b/HabitatBuddy/HabitatBuddy.Android/HabitatBuddy.Android.csproj
@@ -243,5 +243,23 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\sofa.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\hall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\siding_broke.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\basement.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\driveway_byhouse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\porch.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\basement_wall.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
