--- a/HabitatBuddy/HabitatBuddy.iOS/HabitatBuddy.iOS.csproj
+++ b/HabitatBuddy/HabitatBuddy.iOS/HabitatBuddy.iOS.csproj
@@ -383,4 +383,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\basement_wall.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\outside_stairs.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\pantry.png" />
+  </ItemGroup>
 </Project>
