renamed siding_broke for iOS

--- a/HabitatBuddy/HabitatBuddy.iOS/HabitatBuddy.iOS.csproj
+++ b/HabitatBuddy/HabitatBuddy.iOS/HabitatBuddy.iOS.csproj
@@ -366,7 +366,7 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\siding-broke.png" />
+    <BundleResource Include="Resources\siding_broke.png" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\basement.png" />
